<resources>
    <string name="app_name">Katwalk</string>
    <string name="title_outfit">Today\'s Outfits</string>
    <string name="title_closet">My Closet</string>
    <string name="title_fav">Favorite Outfits</string>
    <string name="title_donate">Donate</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="redirect">redirect</string>
    <string name="where_to_donate">Where to Donate:</string>
    <string name="generate">Generate</string>
    <string name="temp">temp</string>
    <string name="casual">Casual</string>
    <string name="temperature">80°F</string>
    <string name="weather">Sunny</string>
    <string name="clear">Clear</string>
    <string name="cloudy">Cloudy</string>
    <string name="rainy">Rainy</string>
    <string name="snowy">Snowy</string>
    <string name="stormy">Stormy</string>
    <string name="misty">Misty</string>
    <string name="thirty_fourty">31-40°F</string>
    <string name="less_thirty"><![CDATA[<=30°F]]></string>
    <string name="fourty_fifty">41-50°F</string>
    <string name="fifty_sixty">51-60°F</string>
    <string name="sixity_seventy">61-70°F</string>
    <string name="seventy_eighty">71-80°F</string>
    <string name="eighty_ninety">81-90°F</string>
    <string name="greater_ninety">90°F</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="lavender">Lavender</string>
    <string name="weatherContent">Weather</string>
    <string name="cel">°C</string>
    <string name="fahern">°F</string>
    <string name="filter">Filter</string>
    <string name="nullString" />
    <string name="items_donated_3">Items Donated: 3 ☺</string>
    <string name="least_worn">Least Worn:</string>
</resources>