<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style = "@style/Weather">

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/less_thirty"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snowy"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        app:layout_constraintVertical_bias="0.002" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:contentDescription="@string/weatherContent"
        app:layout_constraintBottom_toBottomOf="@+id/weather"
        app:layout_constraintStart_toEndOf="@+id/weather"
        app:layout_constraintTop_toTopOf="@id/weather"
        app:srcCompat="@drawable/snowy"
        app:tint="@android:color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>